project('mbedtls',
    'c',
    version : '3.5.1',
    license : 'Apache-2.0/GPL-2.0-or-later ',
)

sources = files(
    'src/aes.c',
    'src/aesce.c',
    'src/aesni.c',
    'src/aria.c',
    'src/asn1parse.c',
    'src/asn1write.c',
    'src/base64.c',
    'src/bignum.c',
    'src/bignum_core.c',
    'src/bignum_mod.c',
    'src/bignum_mod_raw.c',
    'src/block_cipher.c',
    'src/camellia.c',
    'src/ccm.c',
    'src/chacha20.c',
    'src/chachapoly.c',
    'src/cipher.c',
    'src/cipher_wrap.c',
    'src/cmac.c',
    'src/constant_time.c',
    'src/ctr_drbg.c',
    'src/debug.c',
    'src/des.c',
    'src/dhm.c',
    'src/ecdh.c',
    'src/ecdsa.c',
    'src/ecjpake.c',
    'src/ecp.c',
    'src/ecp_curves.c',
    'src/ecp_curves_new.c',
    'src/entropy.c',
    'src/entropy_poll.c',
    'src/error.c',
    'src/gcm.c',
    'src/hkdf.c',
    'src/hmac_drbg.c',
    'src/lmots.c',
    'src/lms.c',
    'src/md5.c',
    'src/md.c',
    'src/memory_buffer_alloc.c',
    'src/mps_reader.c',
    'src/mps_trace.c',
    'src/net_sockets.c',
    'src/nist_kw.c',
    'src/oid.c',
    'src/padlock.c',
    'src/pem.c',
    'src/pk.c',
    'src/pkcs12.c',
    'src/pkcs5.c',
    'src/pkcs7.c',
    'src/pk_ecc.c',
    'src/pkparse.c',
    'src/pk_wrap.c',
    'src/pkwrite.c',
    'src/platform.c',
    'src/platform_util.c',
    'src/poly1305.c',
    'src/psa_crypto_aead.c',
    'src/psa_crypto.c',
    'src/psa_crypto_cipher.c',
    'src/psa_crypto_client.c',
    'src/psa_crypto_driver_wrappers_no_static.c',
    'src/psa_crypto_ecp.c',
    'src/psa_crypto_ffdh.c',
    'src/psa_crypto_hash.c',
    'src/psa_crypto_mac.c',
    'src/psa_crypto_pake.c',
    'src/psa_crypto_rsa.c',
    'src/psa_crypto_se.c',
    'src/psa_crypto_slot_management.c',
    'src/psa_crypto_storage.c',
    'src/psa_its_file.c',
    'src/psa_util.c',
    'src/ripemd160.c',
    'src/rsa_alt_helpers.c',
    'src/rsa.c',
    'src/sha1.c',
    'src/sha256.c',
    'src/sha3.c',
    'src/sha512.c',
    'src/ssl_cache.c',
    'src/ssl_ciphersuites.c',
    'src/ssl_client.c',
    'src/ssl_cookie.c',
    'src/ssl_debug_helpers_generated.c',
    'src/ssl_msg.c',
    'src/ssl_ticket.c',
    'src/ssl_tls12_client.c',
    'src/ssl_tls12_server.c',
    'src/ssl_tls13_client.c',
    'src/ssl_tls13_generic.c',
    'src/ssl_tls13_keys.c',
    'src/ssl_tls13_server.c',
    'src/ssl_tls.c',
    'src/threading.c',
    'src/timing.c',
    'src/version.c',
    'src/version_features.c',
    'src/x509.c',
    'src/x509_create.c',
    'src/x509_crl.c',
    'src/x509_crt.c',
    'src/x509_csr.c',
    'src/x509write.c',
    'src/x509write_crt.c',
    'src/x509write_csr.c')

inc_dirs = include_directories('./include')
libmbedtls = library(
  'libmbedtls',
  sources,
  c_args: '-DMBEDTLS_SSL_DTLS_SRTP',
  include_directories: inc_dirs
)

libmbedtls_dep = declare_dependency(
    include_directories: inc_dirs,
    link_with: libmbedtls
)
